fix spacing issues

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,7 +16,7 @@
     @apply relative left-1/2 right-1/2 ml-0 mr-[-50vw] w-[50vw];
   }
   .componentcontainer {
-    @apply relative left-1/2 right-1/2 mx-[-50vw] flex w-screen flex-col items-center justify-center py-20;
+    @apply relative left-1/2 right-1/2 mx-[-50vw] flex w-screen flex-col items-center justify-center py-10 md:py-20;
   }
   .cs-w-full {
     @apply relative left-1/2 right-1/2 mx-[-50vw] w-screen;
